# redis_proxy

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile
bench/: proxy_bench.cpp  run_redis_benchmark_smoke.sh  run_single_worker_qps.sh
cmake/: Jemalloc.cmake
docs/superpowers/plans/: 2026-05-19-redis-proxy.md  2026-05-20-redis-proxy-performance.md  2026-05-21-redis-command-expansion.md  2026-05-21-util-refactoring.md
docs/superpowers/specs/: 2026-05-19-redis-proxy-design.md  2026-05-21-redis-command-expansion-design.md  2026-05-21-util-refactoring-design.md
include/redis_proxy/: backend_channel.h  backend_pool.h  buffer.h  client_session.h  co_socket.h  command_rules.h  config.h  coroutine_signal.h  endpoint.h  proxy_server.h  resp_parser.h  status.h  worker.h
scripts/: build_jemalloc.sh
src/: backend_channel.cpp  backend_pool.cpp  buffer.cpp  client_session.cpp  co_socket.cpp  command_rules.cpp  config.cpp  coroutine_signal.cpp  empty.cpp  endpoint.cpp  fd_notifier.cpp  main.cpp  proxy_server.cpp  resp_parser.cpp  worker.cpp
tests/: backend_channel_test.cpp  backend_pool_test.cpp  buffer_test.cpp  client_session_test.cpp  co_socket_test.cpp  command_rules_test.cpp  config_test.cpp  coroutine_signal_test.cpp  endpoint_test.cpp  fd_notifier_test.cpp  integration_proxy_test.cpp  resp_parser_test.cpp  socket_utils_test.cpp  test_common.h
util/: endpoint.cpp  endpoint.h  fd_notifier.cpp  fd_notifier.h  socket_utils.cpp  socket_utils.h
